--- a/src/main/resources/templates/blocks/menuTop.html
+++ b/src/main/resources/templates/blocks/menuTop.html
@@ -1,11 +1,12 @@
-<div class="meny">
-    <div class="btn-group" id="autoches">
-        <a href="/home">
-        <button type="button"  class="btn btn-dark"> AuthoChes</button>
-        </a>
+
+    <div class="btn-group">
+        <a href="/home" id="autoches">
+        <button  type="button" id="autoches" class="btn btn-dark">AuthoChes</button>
+    </a>
+        
     </div>
-    <div class="btn-group" id="autoches">
-        <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">База знаний</button>
+    <div class="btn-group" >
+        <button type="button" id="autoches" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">База знаний</button>
         <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/home/hero">Герои</a></li>
             <li><a class="dropdown-item" href="/home/weapon">Предметы</a></li>
@@ -14,8 +15,8 @@
             <li><a class="dropdown-item" href="/home/gaid">Гайды</a></li>
         </ul>
     </div>
-    <div class="btn-group" id="autoches">
-        <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Правилы игры</button>
+    <div class="btn-group" >
+        <button type="button" id="autoches" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Правилы игры</button>
         <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/home/whatgame">Как искать игру</a></li>
             <li><a class="dropdown-item" href="/home/round">Действия по раундам</a></li>
@@ -23,21 +24,22 @@
         </ul>
     </div>
 
-    <div class="btn-group" id="autoches">
-        <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Новости</button>
+    <div class="btn-group">
+        <button type="button" id="autoches" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Новости</button>
         <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/home/path">Патч Игры</a></li>
             <li><a class="dropdown-item" href="/home/updateweb">Обновление сайта</a></li>
         </ul>
     </div>
 
-    <div class="btn-group" id="autoches">
-        <button type="button" class="btn btn-dark dropdown-toggle " data-bs-toggle="dropdown" aria-expanded="false">Расы и класы</button>
+    <div class="btn-group">
+        <button type="button" id="autoches" class="btn btn-dark dropdown-toggle " data-bs-toggle="dropdown" aria-expanded="false">Расы и класы</button>
         <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/home/ras">Расы</a></li>
             <li><a class="dropdown-item" href="/home/classhero">Классы</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/home/synergy">Синергии</a></li>
         </ul>
+
     </div>
-</div>
+
