--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<header th:insert="blocks/header :: header">
+<header th:insert="blocks/headerFooter/header :: header">
 
 </header>
 <div class="container">
@@ -30,5 +30,5 @@
         <a href="/registration">Register</a>
     </h4>
 </div>
-<footer th:insert="blocks/footer :: footer"></footer>
+<footer th:insert="blocks/headerFooter/footer :: footer"></footer>
 </body></html>
