--- a/src/main/resources/templates/userMenuTop/button1/autoChess.html
+++ b/src/main/resources/templates/userMenuTop/button1/autoChess.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-<header th:insert="blocks/header :: header"></header>
-
-            <div id="blokc" class="fon">
-                <div th:insert="blocks/blokcMenyTop :: div"></div>
+<header th:insert="blocks/headerFooter/footer :: header"></header>
+<div class="fon">
+            <div id="blokc">
+                <div  class="top" th:insert="blocks/blokcMenyTop :: div"></div>
                     <div class="border border-dark" id="pading">
                         <h1>Auto Chess — новейшая соревновательная многопользовательская стратегия, разработанная Drodo и Dragonest Co.Ltd, изданная и технически поддерживаемая Dragonest Co.Ltd.</h1>
                         <h2>Auto Chess</h2>
-                        <t>Auto Chess — это оригинальный автобатлер, разработанный совместно компаниями Dragonest Co.Ltd и Drodo Studio, и изданный Dragonest Co.Ltd.
+                        <t >Auto Chess — это оригинальный автобатлер, разработанный совместно компаниями Dragonest Co.Ltd и Drodo Studio, и изданный Dragonest Co.Ltd.
                             С момента своего выхода Auto Chess оказывает значительное влияние на игровую индустрию во всём мире благодаря новизне игрового процесса и стратегическим соревновательным функциям. Игра уже обзавелась десятками миллионов поклонников по всему миру. Здесь каждый может соревноваться в сетевых битвах с другими игроками со всего мира и наслаждаться совершенной новой соревновательной стратегией.
                             Оригинальный игровой процесс, новаторский автобатлер
                             Auto Chess — инновационный игровой мод, созданный Drodo Studio, — открыл для онлайн-игр новое измерение. Здесь вам доступен самый подлинный контент и самый чистый игровой режим, присущие только этому жанру.
@@ -33,8 +33,8 @@
         
         
     
-
-<footer th:insert="blocks/footer :: footer"></footer>
+</div>
+<footer th:insert="blocks/headerFooter/footer :: footer"></footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
