--- a/src/main/resources/templates/userMenuTop/button2/admin/add/heroAdd.html
+++ b/src/main/resources/templates/userMenuTop/button2/admin/add/heroAdd.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <body>
 
-<header th:insert="blocks/header :: header">
+<header th:insert="blocks/headerFooter/header :: header">
 
 </header>
 
@@ -48,7 +48,7 @@
 </div>
 
 
-<footer th:insert="blocks/footer :: footer"></footer>
+<footer th:insert="blocks/headerFooter/footer :: footer"></footer>
 </body>
 
 </html>
