--- a/src/main/resources/templates/blocks/headerFooter/header.html
+++ b/src/main/resources/templates/blocks/headerFooter/header.html
@@ -30,7 +30,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="/add/hero" class="nav-link text-white">
+                                    <a href="/admin/hero" class="nav-link text-white">
                                         <svg class="bi d-block mx-auto mb-12" width="24" height="24">
                                             <use xlink:href="#table"></use>
                                         </svg>
