--- a/src/main/resources/templates/userMenuTop/button2/admin/displayHero.html
+++ b/src/main/resources/templates/userMenuTop/button2/admin/displayHero.html
@@ -13,8 +13,7 @@
   <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
        th:insert="blocks/navPanelAdmin ::div"></nav>
 
-  <div id="blokc" >
-    <div th:insert="blocks/blokcMenyTop :: div"></div>
+  <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="border border-dark" id="pading">
 
       <table class="table">
@@ -34,13 +33,7 @@
         </thead>
 
         <tbody>
-        <tr th:each="hero1 : ${imageHero}">
-
-
-
-
-
-
+        <tr th:each="hero1 : ${editHero}">
 
           <td>
             <img  th:src="'/images/' + ${hero1.iconHero}">
@@ -62,7 +55,7 @@
               <img  th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
             </div>
-            <a th:href="'/admin/' +${hero1.hero/id}" class="btn btn-warning">Детальние</a>
+            <a th:href="'/admin/' +${hero1.hero.id}" class="btn btn-warning">Детальние</a>
           </td>
 
 
@@ -84,7 +77,7 @@
 
 
     </div>
-  </div>
+  </main>
   <footer th:insert="blocks/footer :: footer"></footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
