--- a/src/main/resources/templates/userMenuTop/button2/admin/edit/editHero.html
+++ b/src/main/resources/templates/userMenuTop/button2/admin/edit/editHero.html
@@ -39,7 +39,7 @@
                 </p>
                 <textarea name="full_text" placeholder="Ведите полное описание героя" class="form-control"></textarea><br>
 
-                <button type="submit" class="btn btn-success">Добавить</button>
+                <button type="submit" class="btn btn-success">Обновить</button>
             </form>
 
         </main>
