--- a/src/main/resources/templates/userMenuTop/button2/skill.html
+++ b/src/main/resources/templates/userMenuTop/button2/skill.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<header th:insert="blocks/header :: header"></header>
+<header th:insert="blocks/headerFooter/header :: header"></header>
 
 <div class="container-fluid" id="t">
     
@@ -39,7 +39,7 @@
         
     
 </div>
-<footer th:insert="blocks/footer :: footer"></footer>
+<footer th:insert="blocks/headerFooter/footer :: footer"></footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
