--- a/src/main/resources/templates/userMenuTop/button1/autoChess.html
+++ b/src/main/resources/templates/userMenuTop/button1/autoChess.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-<header th:insert="blocks/headerFooter/footer :: header"></header>
+<header th:insert="blocks/headerFooter/header :: header"></header>
 <div class="fon">
             <div id="blokc">
-                <div  class="top" th:insert="blocks/blokcMenyTop :: div"></div>
+                <div  class="top" th:insert="blocks/menuTop :: div"></div>
                     <div class="border border-dark" id="pading">
                         <h1>Auto Chess — новейшая соревновательная многопользовательская стратегия, разработанная Drodo и Dragonest Co.Ltd, изданная и технически поддерживаемая Dragonest Co.Ltd.</h1>
                         <h2>Auto Chess</h2>
