--- a/src/main/resources/templates/userMenuTop/button2/admin/edit/editHero.html
+++ b/src/main/resources/templates/userMenuTop/button2/admin/edit/editHero.html
@@ -2,40 +2,36 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <body>
 
-<header th:insert="blocks/header :: header">
+<header th:insert="blocks/headerFooter/header :: header">
 
 </header>
 
 <div class="container-fluid">
     <div class="row">
         <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
-             th:insert="blocks/navPanelAdmin ::div"></nav>
+             th:insert="blocks/menuRightAdmin ::div"></nav>
 
 
 
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4" th:each="hero : ${editHero}">
             <h1>Добавление героя</h1>
-            <form th:action="@{/admin/hero}" method="post" enctype="multipart/form-data">
+            <form th:action="@{'/admin/' + ${hero.hero.id}} " method="post" enctype="multipart/form-data">
                 <p>вставте икону героя
                     <input type="file" name="iconHero" th:value="${hero.iconHero}">
                 </p>
-                <input th:value="${hero.hero.id}" type="text" name="hero"  placeholder="Ведите имя героя" class="form-control"><br>
+                <input th:value="${hero.hero.nameHero}" type="text" name="hero"  placeholder="Ведите имя героя" class="form-control"><br>
                 <input th:value="${hero.hero.tirHero}" type="text" name="tear" placeholder="видите тир героя" class="form-control"><br>
                 <input th:value="${hero.hero.classHero}" type="text" name="classHero" placeholder="Ведите расу героя" class="form-control"><br>
                 <input th:value="${hero.hero.classHero1}" type="text" name="classHero1" placeholder="Ведите класс героя" class="form-control"><br>
                 <input th:value="${hero.hero.classHero2}" type="text" name="classHero2" placeholder="Ведите класс героя" class="form-control"><br>
-                <input th:value="${hero.hero.classHero3}" type="text" name="classHero3" placeholder="Ведите класс героя" class="form-control"><br>
-                <p>вставте икону расы
-                    <input th:value="${hero.iconSpecies}" type="file" name="iconSpecies" placeholder="вставте икону расы">
+                <p>вставте икону класса
+                    <input   type="file" name="iconClassHero" placeholder="вставте икону расы">
                 </p>
                 <p>вставте икону класса
-                    <input  th:value="${hero.iconClassHero}" type="file" name="iconClassHero" placeholder="вставте икону расы">
+                    <input   type="file" name="iconClassHero1" placeholder="вставте икону расы">
                 </p>
                 <p>вставте икону класса
-                    <input  th:value="${hero.iconClassHero1}" type="file" name="iconClassHero1" placeholder="вставте икону расы">
-                </p>
-                <p>вставте икону класса
-                    <input  th:value="${hero.iconClassHero2}" type="file" name="iconClassHero1" placeholder="вставте икону расы">
+                    <input   type="file" name="iconClassHero2" placeholder="вставте икону расы">
                 </p>
                 <textarea name="full_text" placeholder="Ведите полное описание героя" class="form-control"></textarea><br>
 
@@ -48,7 +44,7 @@
 </div>
 
 
-<footer th:insert="blocks/footer :: footer"></footer>
+<footer th:insert="blocks/headerFooter/footer :: footer"></footer>
 </body>
 
 </html>
