--- a/src/main/resources/templates/userMenuTop/button2/weapon.html
+++ b/src/main/resources/templates/userMenuTop/button2/weapon.html
@@ -13,7 +13,7 @@
 
 
     <div id="blokc">
-        <div th:insert="blocks/blokcMenyTop :: div"></div>
+        <div  class="top" th:insert="blocks/menuTop :: div"></div>
         <div class="border border-dark" id="pading">
 
             <table class="table">
